feat: add generator controller
